Fixing text and made instructions more legible and informative

--- a/packages/frontend/src/App.css
+++ b/packages/frontend/src/App.css
@@ -118,7 +118,7 @@ html, body {
 }
 
 .uploadMetadataPage {  
-  margin-top: 60px;
+  /* margin-top: 60px; */
 }
 
 .uploadDataFiles {
